2002-07-09  Larry Jones  <lawrence.jones@eds.com>

	* NEWS (Changes since 1.11.2): Note lock message times now UTC.

2002-06-28  Derek Price  <oberon@umich.edu>

	* INSTALL (Building [on] other platforms): Don't reference the Mac
	README file since it has been missing for several releases.  Mention
	the UNIXness of Mac OS X and correct references to wincvs.org to point
	to the new cvsgui.org .
	(Reported by Sarah Gonzales <slindahl@rice.edu>.)

2002-05-22  Larry Jones  <lawrence.jones@eds.com>

	* TODO (173, 202): Update to reflect current state of affairs.
	(207): Defunct as of 1.11.2.

	* NEWS (Changes from 1.11.1p1 to 1.11.2): Note new RereadLogAfterVerify
	config option.

2002-05-15  Larry Jones  <lawrence.jones@eds.com>

	* NEWS (Changes from 1.11.1p1 to 1.11.2): Note log/rlog changes.

2002-05-08  Derek Price  <oberon@umich.edu>

	* configure.in: Add code to use lib/fnmatch.h.in redirection when
	necessary to avoid namespace conflicts in #includes.
	* configure: Regenerated.

2002-05-08  Derek Price  <oberon@umich.edu>

	* TODO (215): Add note.

2002-05-08  Derek Price  <oberon@umich.edu>

	* TODO (214): Clarify item.

2002-05-02  Derek Price  <oberon@umich.edu>

	* configure.in: Add check for fnmatch.h so we can avoid namespace
	conflicts on systems where the fnmatch function is broken.  Not sure
	this applies to any systems but Mac OS X.

	* configure: Regenerated.
	* config.h.in: Ditto.

2002-05-02  Derek Price  <oberon@umich.edu>

	* .cvsignore: Remove config.cache and add autom4te.cache.

2002-05-02  Derek Price  <oberon@umich.edu>

	* noautoconf.sh: Update this script for operation with the new autotools.
	* stamp-h1.in: Remove this obsolete file.

2002-05-01  Derek Price  <oberon@umich.edu>

	* TODO (224): Comment on this item.

2002-05-01  Larry Jones  <lawrence.jones@eds.com>

	* TODO (215 - 225): New items.

2002-05-01  Derek Price  <oberon@umich.edu>

	* TODO (214): Add note about moving options.h options into the configure
	script.