@@ -1,3 +1,9 @@
+2002-08-12  Derek Price  <oberon@umich.edu>
+
+	* configure.in: Move ftruncate from AC_CHECK_FUNC to AC_REPLACE_FUNC.
+	* aclocal.m4: Regenerated.
+	* configure: Ditto.
+
 2002-07-09  Larry Jones  <lawrence.jones@eds.com>
 
 	* NEWS (Changes since 1.11.2): Note lock message times now UTC.
